# PersonalWebsite

./: .gitignore  Dockerfile  pyproject.toml
src/: requirements.in  requirements.txt
src/LukeWebsite/: package-lock.json  package.json  webpack.config.js
src/LukeWebsite/LukeWebsite/settings/: common.py  prod.py
src/LukeWebsite/homepagePortfolio/: urls.py  views.py
src/LukeWebsite/homepagePortfolio/templates/homepagePortfolio/: index.html
src/LukeWebsite/static/css/: style.css
src/LukeWebsite/static/js/: gameDetails.js  index-bundle.js  leaderboards.js
src/LukeWebsite/static/svelte/: bundle.js  bundle.js.map
src/LukeWebsite/templates/homepagePortfolio/: hello_webpack.html  index.html
src/LukeWebsite/tenMans/: forms.py  models.py  urls.py  views.py
src/LukeWebsite/tenMans/templates/tenMans/: game_detail.html  leaderboard.html  navBar.html  team_builder.html  test_svelte.html
src/LukeWebsite/tenMans/views/: base_views.py
src/frontend/: package-lock.json  package.json  rollup.config.js  svelte.config.js  tailwind.config.cjs
src/frontend/src/: App.svelte
src/frontend/src/routes/: index.svelte
