[project]
name = "lukewebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "appdirs>=1.4.4",
    "autopep8>=2.3.1",
    "crispy-bootstrap5>=2024.10",
    "django>=4.2.16",
    "django-bootstrap-datepicker-plus>=5.0.5",
    "django-bootstrap5>=24.3",
    "django-cassiopeia>=2.1.1",
    "django-coverage-plugin>=3.1.0",
    "django-crispy-forms>=2.3",
    "django-nose>=1.4.7",
    "factory-boy>=3.3.1",
    "flake8>=7.1.1",
    "gunicorn>=23.0.0",
    "gviz-api>=1.10.0",
    "mypy-extensions>=1.0.0",
    "mysqlclient>=2.2.6",
    "pathspec>=0.12.1",
    "pip-tools>=7.4.1",
    "pipdeptree>=2.23.4",
    "plotly>=5.24.1",
    "pylint>=3.3.1",
    "pylint-django>=2.6.1",
    "pymysql>=1.1.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "pytest-xdist>=3.6.1",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "scipy>=1.13.1 ; sys_platform != 'darwin'",
    "selenium>=4.27.0",
    "setuptools>=75.6.0",
    "typed-ast>=1.5.5",
    "typing-extensions>=4.12.2",
    "whitenoise>=6.8.2",
]
