[project]
name = "lukewebsite"
version = "1.0.0"
description = "Portfolio Website"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "appdirs==1.4.4",
    "arrow==0.17.0",
    "asgiref==3.6.0",
    "astroid==2.11.7",
    "async-generator==1.10",
    "attrs==22.1.0",
    "autopep8==1.7.0",
    "build==0.8.0",
    "cassiopeia==5.0.1",
    "certifi==2024.7.4",
    "cffi==1.15.1",
    "charset-normalizer==2.1.0",
    "click==8.1.3",
    "coverage[toml]==6.4.3",
    "crispy-bootstrap5==0.6",
    "cryptography==43.0.1",
    "datapipelines==1.0.7",
    "dill==0.3.5.1",
    "django==4.2.16",
    "django-bootstrap-datepicker-plus==4.0.0",
    "django-bootstrap5==22.1",
    "django-cassiopeia==2.1.1",
    "django-coverage-plugin==2.0.3",
    "django-crispy-forms==1.14.0",
    "django-nose==1.4.7",
    "execnet==1.9.0",
    "factory-boy==3.2.1",
    "faker==14.0.0",
    "flake8==5.0.4",
    "gunicorn==22.0.0",
    "gviz-api==1.10.0",
    "h11==0.13.0",
    "idna==3.7",
    "iniconfig==1.1.1",
    "isort==5.10.1",
    "lazy-object-proxy==1.7.1",
    "mccabe==0.7.0",
    "merakicommons==1.0.10",
    "mypy-extensions==0.4.3",
    "mysqlclient==2.2.6",
    "networkx==2.8.5",
    "nose==1.3.7",
    "numpy==1.23.1",
    "outcome==1.2.0",
    "packaging==21.3",
    "pathspec==0.9.0",
    "pep517==0.13.0",
    "pillow==10.3.0",
    "pip-tools==6.8.0",
    "pipdeptree==2.2.1",
    "platformdirs==2.5.2",
    "plotly==5.10.0",
    "pluggy==1.0.0",
    "py==1.11.0",
    "pycodestyle==2.9.1",
    "pycparser==2.21",
    "pyflakes==2.5.0",
    "pylint-plugin-utils==0.7",
    "pylint==2.14.5",
    "pylint-django==2.5.3",
    "pymysql==1.1.1",
    "pytest==7.2.0",
    "pytest-cov==3.0.0",
    "pytest-django==4.5.2",
    "pytest-xdist==2.5.0",
    "regex==2022.7.25",
    "requests==2.32.2",
    "scipy==1.9.0 ; sys_platform != 'darwin'",
    "selenium==4.4.0",
    "setuptools>=75.6.0",
    "typed-ast==1.5.4",
    "typing-extensions==4.3.0",
    "whitenoise==6.2.0",
    "pyopenssl==22.0.0",
    "pyparsing==3.0.9",
    "pysocks==1.7.1",
    "pytest-forked==1.4.0",
    "python-dateutil==2.8.2",
    "six==1.16.0",
    "sniffio==1.2.0",
    "sortedcontainers==2.4.0",
    "sqlparse==0.5.0",
    "tenacity==8.0.1",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tomlkit==0.11.3",
    "trio==0.21.0",
    "trio-websocket==0.9.2",
    "urllib3[secure,socks]==1.26.11",
    "wheel==0.38.1",
    "wrapt==1.14.1",
    "wsproto==1.1.0",
]
